--- a/ThreePintsDeep.html
+++ b/ThreePintsDeep.html
@@ -2,7 +2,7 @@
 <head>
 	<LINK REL="StyleSheet" HREF="ThreePints.css" TYPE="text/css">
 	<link rel="stylesheet" href="ThreePintsTabs.css" type="text/css">
-	<script type="text/javascript" src='ThreePintsTabs.js'></script>
+	<script type="text/javascript" src='https://raw.github.com/gavinpsmith/snippets/master/ThreePintsTabs.js'></script>
 </head>
 <body>
 <h1>Three Pints Deep</h1>
